--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Comedian GIF Search!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <div id="topics"></div>
     
 
-    <script src="/javascript/APP.JS"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 </html>
