buttons are being added to HTML with one songle class for all buttons. Results from API are displaying in console. Having trouble getting each button to have its own attribute. Also having a hard time displaying the image.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="topics"></div>
-    
+    <div id="gifs-here"></div>
 
     <script src="assets/javascript/app.js"></script>
 </body>
