adding new button function working. form does not clear automatically after being submitted

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
     <div id="topics"></div>
     <div id="gifs-here"></div>
+    <form action="Submit Name">
+        <input id="add-name" type="text" value="">
+        <input id="submit" type="submit">
+    </form>
 
     <script src="assets/javascript/app.js"></script>
 </body>
